--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,51 @@ concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
 
-# jobs:
-#   lint:
-#     uses: ./.github/workflows/lint.yml
-#     secrets: inherit
+jobs:
+  build-release:
+    name: Build artifacts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm64
+
+      - name: Build package
+        uses: addnab/docker-run-action@v3
+        with:
+          image: docker.io/batonogov/pyinstaller-linux:latest
+          options: |
+            --platform linux/arm64
+            --volume ${{ github.workspace }}/:/src
+          run: |
+            pip install -r /src/requirements.txt
+            pyinstaller --onefile /src/src/app.py
+
+      - name: Bundle App
+        run: |
+          mkdir -p .artie && \
+          cp -r ./dist/app ./assets ./config.json .artie
+          zip -r Artie.zip .artie ./Artie\ Scraper.sh
+
+      - name: Upload assets
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
+        with:
+          files: Artie.zip
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit and push changes
+        run: |
+          git add .
+          git commit -m "Add Artie.zip file"
+          git push
